Simplified grid design for all sections.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -168,6 +168,14 @@ img{
 	**************************/	
 
 	/**************************
+		CONTACT
+	**************************/	
+	.jumbotron{
+		p{
+			font-size: 2rem;
+		}
+	}
+	/**************************
 		TOP NAV
 	**************************/
 	.btn-div{
