--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,11 +38,9 @@ img{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	.brand{
-		 color: $light;
-	}
-	.brand:hover{
-		text-decoration: none;
+	.my-logo{
+		width: 15%;
+		padding: 10px;
 	}
 	.top-header-social-media{
 		.fab{
@@ -53,8 +51,6 @@ img{
 	}
 	.hamburger{
 		display: block;
-	}
-	.brand, .hamburger{
 		cursor: pointer;
 		padding: 5px;
 		margin: 5px;
@@ -86,9 +82,6 @@ img{
 	a:hover{
 		background: $brand;
 		color: $light;
-	}
-	.active-link{
-		text-decoration: underline;
 	}
 }
 
