--- a/scss/main.scss
+++ b/scss/main.scss
@@ -167,6 +167,15 @@ button{
 			background: $brand;
 		}
 	}
+	.progress{
+		.progress-bar{
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			padding: 0px 10px;
+		}
+	}
 
 	.card{
 		margin: 10px 0px;
