--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,33 +4,27 @@
 $dark: #2D2830;
 $light: #F1F1EB;
 $brand: #CE4554;
-$accent: #878593;
-$accent2: #A37B71;
 $raleway: 'Raleway', sans-serif;
-
 /**************************
 	BASE VALUES
 **************************/
-body{
-	font-size: 17px;
+*{
+	font-size: 20px;
 	font-family: $raleway;
+	line-height: 2rem;
 	color: $dark;
 }
-
+body{
+	background: $light;
+}
 h1,h2,h3,h4,h5,h6{
 	font-size: 1.5rem;
     font-weight: 900;
     text-transform: uppercase;
 }
-
-p{
-	font-size: 18px;
-}
-
 img{
 	display: block;
 }
-
 button{
     margin-top: 20px;
     padding: 10px;
@@ -39,7 +33,6 @@ button{
     color: $light;
     cursor: pointer;
 }
-
 /**************************
 	TOP HEADER
 **************************/
@@ -52,13 +45,10 @@ button{
 	.my-logo{
 		width: 100px;
 	}
-	.hamburger{
-		cursor: pointer;
-	}
 	.top-header-social-media{
 		display: flex;
 		justify-content: right;
-		margin-right: 1rem;
+		padding: 1rem;
 		.far, .fab{
 			color: $light;
 			font-size: 2rem;
@@ -66,180 +56,123 @@ button{
 		}
 	}
 }
-
 /**************************
-	TOP NAV
+	HOVER EFFECT
 **************************/
-.top-nav{
-	.nav-ul{
-		background: $light;
-		display: flex;
-		justify-content: center;
-		list-style-type: none;
-		margin: 0px;
-		padding: 0px;
-	}
-	a{
-		color: $brand;
-		display: block;
-		padding: 15px;
-		text-decoration: none;	
-		text-transform: uppercase;
-	}
-	a:hover{
-		background: $brand;
-		color: $light;
-	}
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
 }
-
-/**************************
-	LANDING PAGE
-**************************/
-#particles-js{
-	height: 100vh;
-	background: $dark;
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.1);
 }
-
-.landing-page-card{
-	position: absolute;
-	top: 50vh;
-	left: 0vw;
-	right: 0vw;
-	width: 100vw;
-	margin: 0px auto;
-	text-align: center;
-	padding: 10px;
-	h1, h2{
-		color: $light;
-        font-size: 1rem;
-	}
-}
-
-.circle-down{
-	width: 10%;
-	position: absolute;
-	bottom: 10vh;
-	left: 0vw;
-	right: 0vw;
-	margin: 0px auto;
-	text-align: center;
-	.fas{
-		font-size: 3rem;
-		color: $light;
-	}
-	.fas:hover{
-		cursor: pointer;
-	}
-}
-
-.typed-js{
-	color: $brand;
-}
-
 /**************************
 	MAIN CONTENT
 **************************/
-.main-content{
-	width: 768px;
-	margin: 0px auto;
-	.h2-brand{
-		color: $brand;
-		text-align:  center;
-		text-transform: uppercase;
-		padding: 25px;
-	}
-	h2{
-		text-align: center;
-	}
-	a{
-		color: $brand;
-	}
-	/**************************
-		SKILLS
-	**************************/	
-	.progress:nth-child(odd){
-		.progress-bar{
-			background: $dark;
+.main-grid{
+	max-width: 100%;
+	display: grid;
+	grid-template-areas: 
+		"about projects"
+		"skills projects"
+		"contact projects";
+	grid-template-columns: 450px 1fr;
+	.about{
+		grid-area: about;
+		img{
+			max-width: 100%;
+		}
+		#pic-degree{
+			max-width: 100%;
+			margin-top: 20px;
 		}
 	}
-	.progress:nth-child(even){
-		.progress-bar{
-			background: $brand;
-		}
+	.skills{
+		grid-area: skills;
 	}
-	.progress{
-		.progress-bar{
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-			align-items: center;
-			padding: 0px 10px;
-		}
-	}
-
-	.card{
-		margin: 10px 0px;
-		.btn{
-			background: $brand;
-			color: $light;
-		}
-		.card-title{
-			text-transform: none;
-		}
-	}
-	/**************************
-		CONTACT
-	**************************/	
-    .contact-form{
-        .name, .email, .subject, .message{
-            border: 1px solid $dark;
-            width: 100%;
-            height: 2.5rem;
-            margin: 0.5rem 0rem;
-            text-indent: 1rem;
-        }  
-        .message{
-            height: 5rem;
-        }
-        input:focus{
-            outline: none;
-        }
-    }
-    
-    .contact-social-media{
-        display: flex;
-        justify-content: center;
-        .far, .fab{
-            font-size: 5rem;
-            color: $dark;
-        }
-    }
-    
-	/**************************
-		TOP NAV
-	**************************/
-	.btn-div{
-		display: flex;
-		justify-content: flex-end;
-	}
-	.btn-send-message{
+	#particles-js{
+		min-height: 100%;
 		background: $brand;
-		border: none;
-		height: 3vh;
-		color: $light;
+	}
+	.projects{
+		grid-area: projects;
+		position: relative;
+		.header{
+			background-color: $light;
+			position: absolute;
+			top: -100px;
+			left: 0px;
+			right: 0px;
+			height: 100px;
+			padding: 0.5rem;
+			text-align: center;
+		}
+		.grid-container{
+			padding: 25px;
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+			justify-content: space-evenly;
+			justify-items: center;
+			align-content: space-evenly;
+			align-items: center;
+			position: absolute;
+			top: 200px;
+			left: 25px;
+			right: 25px;
+			max-height: 100%;
+		}
+		.grid-container .item1, .grid-container .item2, .grid-container .item3{
+			max-width: 100%;
+			img{
+				max-width: 100%;
+				margin: 0px auto;
+				cursor: pointer;
+			}
+			h2{
+				background: $light;
+				padding: 0.5rem;
+			}
+		}
+	}
+	.contact{
+		grid-area: contact;
+		.far, .fab{
+			color: $dark;
+			font-size: 2rem;
+			padding: 10px;
+		}
+	}
+	.about, .skills, .contact{
+		h2{
+			color: $brand;
+		}
+	}
+	.projects{
+		.header h2, a{
+			color: $brand;
+		}
+	}
+	.about, .skills, .contact, .projects, .grid-container > *{
+		padding: 25px;
+		p{
+			margin: 10px 0px;
+		}
 	}
 }
-
 /**************************
 	FOOTER
 **************************/
 footer{
 	background: $dark;
 	color: $light;
-	p{
-		width: 50vw;
-		margin: 0px auto;
-	}
 	.footer-social-media{
 		.far, .fab{
 			color: $light;
@@ -248,43 +181,96 @@ footer{
 		}
 	}
 }
-
 /**************************
-	MEDIA QUERIES
+	MEDIUM DEVICES
 **************************/
-
-@media only screen and (max-width: 540px) {
-    .top-nav{
-    	.nav-ul{
-    		display: none;
-    	}
-    	.nav-mobile{
-    		display: flex;
-    		flex-direction: column;
-    		justify-content: flex-start;
-    		height: 100vh;
-    		list-style-type: none;
-    		margin: 0px;
-    		padding: 0px;
-    	}
-    }
-    .top-header{
-    	.top-header-social-media{
-    		display: none;
-    	}
-    }
+@media only screen and (max-width: 950px) {
+	.main-grid{
+		max-width: 100%;
+		display: flex;
+		flex-direction: column;
+		.about{
+			header{
+				img{
+					max-width: 50%;
+					float: left;
+					margin-right: 20px;
+				}
+			}
+		}
+		#particles-js{
+			background: $brand;
+		}
+		.projects{
+			all: initial;
+			position: relative;
+			height: 2000px;
+			.grid-container{
+				all: initial;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				position: absolute;
+				top: 0px;
+				bottom: 0px;
+				left: 0px;
+				right: 0px;
+				.header{
+					background-color: $light;
+					position: absolute;
+					top: 0px;
+					height: 100px;
+					text-align: left;
+				}
+			}
+			.grid-container .item1, .grid-container .item2, .grid-container .item3{
+				h2{display:none;}
+				max-width: 100%;
+				img{
+					max-width: 100%;
+					margin: 0px auto;
+					cursor: pointer;
+				}
+			}
+		}
+	}
 }
-
-@media only screen and (min-width: 540px) {
-	#hamburger{
-		display: none;
+/**************************
+	SMALLER DEVICES
+**************************/
+@media only screen and (max-width: 325px) {
+	.top-header{
+		.top-header-social-media{
+			.far, .fab{
+				font-size: 1.5rem;
+			}
+		}
 	}
-	.nav-mobile{
-		display: none;
+}
+@media only screen and (max-width: 400px) {
+	.main-grid {
+		.about {
+			header {
+				img {
+					min-width: 100%;
+					margin: 0px 0px 15px 0px;
+				}
+			}
+		}
+		.projects{
+			height: 1500px;
+		}
 	}
-	.top-nav{
-		.top-nav-social-media{
-			display: none;
+}
+@media only screen and (max-width: 330px) {
+	.main-grid {
+		.projects{
+			height: 1100px;
+			.grid-container{
+				.item1{
+					margin-top: 100px;
+				}
+			}
 		}
 	}
 }
