--- a/css/main.scss
+++ b/css/main.scss
@@ -8,24 +8,34 @@ $raleway: 'Raleway', sans-serif;
 /**************************
 	BASE VALUES
 **************************/
-*{
+html
+{
+	min-height: 100%;
+}
+*
+{
 	font-size: 20px;
 	font-family: $raleway;
 	line-height: 2rem;
 	color: $dark;
 }
-body{
+body
+{
 	background: $light;
+	min-height: 100%;
 }
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6
+{
 	font-size: 1.5rem;
     font-weight: 900;
     text-transform: uppercase;
 }
-img{
+img
+{
 	display: block;
 }
-button{
+button
+{
     margin-top: 20px;
     padding: 10px;
     background: $brand;
@@ -36,20 +46,25 @@ button{
 /**************************
 	TOP HEADER
 **************************/
-.top-header{
+.top-header
+{
 	background: $dark;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem;
-	.my-logo{
+	height: 140px;
+	.my-logo
+	{
 		width: 100px;
 	}
-	.top-header-social-media{
+	.top-header-social-media
+	{
 		display: flex;
 		justify-content: right;
 		padding: 1rem;
-		.far, .fab{
+		.far, .fab
+		{
 			color: $light;
 			font-size: 2rem;
 			padding: 10px;
@@ -57,48 +72,37 @@ button{
 	}
 }
 /**************************
-	HOVER EFFECT
-**************************/
-.hvr-grow {
-    display: inline-block;
-    vertical-align: middle;
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-.hvr-grow:hover,
-.hvr-grow:focus,
-.hvr-grow:active {
-    transform: scale(1.1);
-}
-/**************************
 	MAIN CONTENT
 **************************/
-.main-grid{
+.main-grid
+{
 	max-width: 100%;
+	min-height: 100%;
 	display: grid;
 	grid-template-areas: 
 		"about projects"
 		"skills projects"
 		"contact projects";
 	grid-template-columns: 450px 1fr;
-	.about{
+	.about
+	{
 		grid-area: about;
-		img{
+		img
+		{
 			max-width: 100%;
 		}
-		#pic-degree{
+		#pic-degree
+		{
 			max-width: 100%;
 			margin-top: 20px;
 		}
 	}
-	.skills{
+	.skills
+	{
 		grid-area: skills;
 	}
-	.skills-grid{
+	.skills-grid
+	{
 		padding: 0px;
 		margin: 0px;
 		list-style-type: none;
@@ -106,80 +110,79 @@ button{
 		grid-template-columns: repeat(3, 1fr);
 		justify-content: center;
 		align-items: center;
-		li{
+		li
+		{
 			display: flex;
 			justify-content: center;
 			margin: 0.5rem;
-			img{
+			img
+			{
 				padding: 0.5rem;
 			}
 		}
 	}
-	#particles-js{
-		min-height: 100%;
+	#particles-js
+	{
 		background: $brand;
+		min-height: 100%;
+		padding: 0px;
 	}
-	.projects{
+	.projects
+	{
 		grid-area: projects;
-		position: relative;
-		.header{
-			background-color: $light;
-			position: absolute;
-			top: -100px;
-			left: 0px;
-			right: 0px;
-			height: 100px;
-			padding: 0.5rem;
-			text-align: center;
-		}
-		.grid-container{
-			padding: 25px;
+		.grid-container
+		{
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-			justify-content: space-evenly;
-			justify-items: center;
-			align-content: space-evenly;
-			align-items: center;
+			grid-template-columns: repeat(auto-fit, minmax(512px, 1fr));
 			position: absolute;
-			top: 200px;
-			left: 25px;
-			right: 25px;
-			max-height: 100%;
+			top: 140px;
+			left: 450px;
+			right: 0px;
+			bottom: 0px;
+			min-height: 100%;
 		}
-		.grid-container .item1, .grid-container .item2, .grid-container .item3{
-			max-width: 100%;
-			img{
-				max-width: 100%;
-				margin: 0px auto;
-				cursor: pointer;
-			}
-			h2{
-				background: $light;
-				padding: 0.5rem;
+		.grid-container
+		{
+			.item1, .item2, .item3, .item4
+			{
+				margin: 15px;
+				a img
+				{
+					max-width: 100%;
+					margin: 0px auto;
+					cursor: pointer;
+				}
 			}
 		}
 	}
-	.contact{
+	.contact
+	{
 		grid-area: contact;
-		.far, .fab{
+		.far, .fab
+		{
 			color: $dark;
 			font-size: 2rem;
 			padding: 10px;
 		}
 	}
-	.about, .skills, .contact{
-		h2{
+	.about, .skills, .contact
+	{
+		h2
+		{
 			color: $brand;
 		}
 	}
 	.projects{
-		.header h2, a{
+		.header h2, a
+		{
 			color: $brand;
 		}
 	}
-	.about, .skills, .contact, .projects, .grid-container > *{
+	.about, .skills, .contact, .projects, .grid-container > *
+	{
 		padding: 25px;
-		p{
+		p
+		{
 			margin: 10px 0px;
 		}
 	}
@@ -187,11 +190,14 @@ button{
 /**************************
 	FOOTER
 **************************/
-footer{
+footer
+{
 	background: $dark;
 	color: $light;
-	.footer-social-media{
-		.far, .fab{
+	.footer-social-media
+	{
+		.far, .fab
+		{
 			color: $light;
 			font-size: 2rem;
 			padding: 10px;
@@ -201,57 +207,98 @@ footer{
 /**************************
 	MEDIUM DEVICES
 **************************/
-@media only screen and (max-width: 950px) {
-	.main-grid{
+@media only screen and (max-width: 970px)
+{
+	.main-grid
+	{
 		max-width: 100%;
 		display: flex;
 		flex-direction: column;
-		.about{
-			header{
-				img{
+		.about
+		{
+			header
+			{
+				img
+				{
 					max-width: 50%;
 					float: left;
 					margin-right: 20px;
 				}
 			}
 		}
-		#particles-js{
+		#particles-js
+		{
 			background: $brand;
+			height: 2248px;
+			padding: 0px;
 		}
-		.projects{
-			all: initial;
-			position: relative;
-			height: 2000px;
-			.grid-container{
+		.projects
+		{
+			.grid-container
+			{
 				all: initial;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
+				align-items: center;
 				position: absolute;
-				top: 0px;
-				bottom: 0px;
-				left: 0px;
-				right: 0px;
-				.header{
-					background-color: $light;
-					position: absolute;
-					top: 0px;
-					height: 100px;
-					text-align: left;
-				}
+				width: 100%;
 			}
-			.grid-container .item1, .grid-container .item2, .grid-container .item3{
-				h2{display:none;}
+			.grid-container .item1, .grid-container .item2, .grid-container .item3, .grid-container .item4
+			{
 				max-width: 100%;
-				img{
-					max-width: 100%;
-					margin: 0px auto;
-					cursor: pointer;
-				}
+				margin: 0px auto;
 			}
 		}
 	}
 }
+
+// Adjust height on canvas element for responsiveness.
+@media only screen and (max-width: 500px)
+{
+	.main-grid
+	{
+		#particles-js{
+			background: $brand;
+			height: 2000px;
+			padding: 0px;
+		}
+	}
+}
+@media only screen and (max-width: 450px)
+{
+	.main-grid
+	{
+		#particles-js{
+			background: $brand;
+			height: 1800px;
+			padding: 0px;
+		}
+	}
+}
+@media only screen and (max-width: 400px)
+{
+	.main-grid
+	{
+		#particles-js{
+			background: $brand;
+			height: 1600px;
+			padding: 0px;
+		}
+	}
+}
+@media only screen and (max-width: 330px)
+{
+	.main-grid
+	{
+		#particles-js{
+			background: $brand;
+			height: 1320px;
+			padding: 0px;
+		}
+	}
+}
+
 /**************************
 	SMALLER DEVICES
 **************************/
@@ -271,21 +318,6 @@ footer{
 				img {
 					min-width: 100%;
 					margin: 0px 0px 15px 0px;
-				}
-			}
-		}
-		.projects{
-			height: 1500px;
-		}
-	}
-}
-@media only screen and (max-width: 330px) {
-	.main-grid {
-		.projects{
-			height: 1100px;
-			.grid-container{
-				.item1{
-					margin-top: 100px;
 				}
 			}
 		}
