media query fix
fixed order of media queries

--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,24 @@ footer .footer-social-media .far, footer .footer-social-media .fab {
 }
 
 /**************************
+	DESKTOP DEVICES
+**************************/
+@media only screen and (max-width: 3840px) {
+  .main-grid .projects .description {
+    width: 75%;
+  }
+}
+@media only screen and (max-width: 2560px) {
+  .main-grid .projects .description {
+    width: 50%;
+  }
+}
+@media only screen and (max-width: 1920px) {
+  .main-grid .projects .description {
+    width: 75%;
+  }
+}
+/**************************
 	MEDIUM DEVICES
 **************************/
 @media only screen and (max-width: 1040px) {
@@ -260,7 +278,7 @@ footer .footer-social-media .far, footer .footer-social-media .fab {
 @media only screen and (max-width: 300px) {
   .main-grid #particles-js {
     background: #CE4554;
-    height: 1626px;
+    height: 1662px;
     padding: 0px;
   }
 }
@@ -276,20 +294,5 @@ footer .footer-social-media .far, footer .footer-social-media .fab {
   .main-grid .about header img {
     min-width: 100%;
     margin: 0px 0px 15px 0px;
-  }
-}
-@media only screen and (max-width: 3840px) {
-  .main-grid .projects .description {
-    width: 75%;
-  }
-}
-@media only screen and (max-width: 2560px) {
-  .main-grid .projects .description {
-    width: 50%;
-  }
-}
-@media only screen and (max-width: 1920px) {
-  .main-grid .projects .description {
-    width: 75%;
   }
 }/*# sourceMappingURL=main.css.map */
